--- a/index.html
+++ b/index.html
@@ -187,6 +187,36 @@
     .details_wrapper  p{
         margin-bottom: 2%;
     }
+
+    @media screen and (max-width: 786px) {
+   .logo , .menu{
+    width: 100%;
+    padding: 0;
+    height: 40px;
+   }
+   .menu ul li{
+    margin: 0px;
+   }
+   .logo>h2{
+    padding: 10px;
+   }
+   .menu{
+    padding-right: 91px;
+   }
+   .about_us {
+    width: 100%;
+   }
+   .about_details {
+    width: 100%;
+   }
+   .details_wrapper {
+    width: 94%;
+    height: 200px;
+    padding: 5%;
+    margin: 5% auto;
+    overflow: scroll;
+}
+}
     </style>
 </head>
 <body>
@@ -312,13 +342,13 @@
                 </section>
                 <section class="about_details">
                 <div class="details_wrapper">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
+                    <p>1. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
+                    <p>2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
+                    <p>3. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
+                    <p>4. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, assumenda?</p>
                     
                 </div>
             </section>
