--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
     }
 
     @media screen and (max-width: 992px) {
+        *, .skill , .inner_skill > span{
+    font-size: 1em;
+}
    .logo , .menu{
     width: 100%;
     padding: 0;
@@ -216,6 +219,7 @@
     margin: 5% auto;
     overflow: scroll;
 }
+
 }
     </style>
 </head>
